fix(post padding): reducing padding on smaller screens, not sure if this fixes #7

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -5,7 +5,13 @@
   padding: 25px 40px;
   margin-top: 25px;
   box-shadow: -10px 10px rgba(204,204,204,0.5);
+  @include sm-screen {
+    padding: 20px 20px;
+  }
 
+  @include xs-screen {
+    padding: 20px 20px;
+  }
   p {
     font-size: 18px;
     font-weight: 300;
@@ -27,6 +33,14 @@
     a {
       font-size: 28px;
       font-weight: 500;
+    }
+
+    @include sm-screen {
+     font-size: 22px;
+    }
+
+    @include xs-screen {
+      font-size: 24px;
     }
   }
 
